--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,15 @@
+{% load static %}
+
+{% url 'home' as home_url %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Harmonia Hall</title>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <!-- Navigation Goes here -->
