--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -10,6 +10,7 @@
         {% for event in events %}
         <div class="col-md-6 mb-4">
             <div class="card h-100">
+                <img src="{{ event.event_image.url }}" class="card-img-top" alt="{{ event.title }}">
                 <div class="card-body">
                     <h5 class="card-title">
                         <a href="{% url 'event-detail' event.slug %}">{{ event.title }}</a>
