--- a/events/templates/events/whats_on.html
+++ b/events/templates/events/whats_on.html
@@ -13,9 +13,9 @@
                 <p><strong>Date:</strong> {{ event.date }}</p>
                 <p><strong>Time:</strong> {{ event.time }}</p>
                 <p><strong>Venue:</strong> {{ event.venue }}</p>
-                <p><strong>Description:</strong> {{ event.description }}</p>
+                <p><strong>Summary:</strong> {{ event.summary }}</p>
                 <p><strong>Capacity:</strong> {{ event.capacity }}</p>
-                <p><strong>Price:</strong> ${{ event.price }}</p>
+                <p><strong>Price:</strong> £{{ event.price }}</p>
             </li>
             {% endfor %}
         </ul>
