--- a/events/templates/events/booking_form.html
+++ b/events/templates/events/booking_form.html
@@ -13,13 +13,13 @@
                         <p><strong>Date:</strong> {{ event.date }}</p>
                         <p><strong>Time:</strong> {{ event.time }}</p>
                         <p><strong>Venue:</strong> {{ event.venue }}</p>
-                        <p><strong>Price per Ticket:</strong> ${{ event.price }}</p>
+                        <p><strong>Price per Ticket:</strong> £{{ event.price }}</p>
                     {% else %}
                         <h2 class="card-title">{{ object.event.title }}</h2>
                         <p><strong>Date:</strong> {{ object.event.date }}</p>
                         <p><strong>Time:</strong> {{ object.event.time }}</p>
                         <p><strong>Venue:</strong> {{ object.event.venue }}</p>
-                        <p><strong>Price per Ticket:</strong> ${{ object.event.price }}</p>
+                        <p><strong>Price per Ticket:</strong> £{{ object.event.price }}</p>
                     {% endif %}
                     <p><strong>Available Tickets:</strong> {{ available_seats }}</p>
                 </div>
