--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -13,7 +13,7 @@
                         <p><strong>Date:</strong> {{ event.date }}</p>
                         <p><strong>Time:</strong> {{ event.time }}</p>
                         <p><strong>Venue:</strong> {{ event.venue }}</p>
-                        <p><strong>Price:</strong> <span class="h5">${{ event.price }}</span></p>
+                        <p><strong>Price:</strong> <span class="h5">£{{ event.price }}</span></p>
                     </div>
 
                     <div class="card bg-light mb-3">
