Make event description safe for HTML rendering in event detail template

--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -30,7 +30,7 @@
 
                     <div class="mb-4">
                         <h5>Event Description</h5>
-                        <p>{{ event.description }}</p>
+                        <p>{{ event.description|safe }}</p>
                     </div>
 
                     {% if user.is_authenticated %}
