--- a/events/templates/events/bookings.html
+++ b/events/templates/events/bookings.html
@@ -11,7 +11,7 @@
                 <p><strong>Date:</strong> {{ booking.event.date }}</p> 
                 <p><strong>Time:</strong> {{ booking.event.time }}</p>
                 <p><strong>Venue:</strong> {{ booking.event.venue }}</p>
-                <p><strong>Description:</strong> {{ booking.event.description }}</p>
+                <p><strong>Description:</strong> {{ booking.event.description|safe }}</p>
                 <p><strong>Capacity:</strong> {{ booking.event.capacity }}</p>
                 <p><strong>Price:</strong> £{{ booking.event.price }}</p>
                 <p><strong>Number of Tickets:</strong> {{ booking.number_of_tickets }}</p>
