--- a/templates/base.html
+++ b/templates/base.html
@@ -46,8 +46,8 @@
                             href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == whats_on_url %}active{% endif %}" aria-current="page"
-                            href="{% url 'whats-on' %}">What's On</a>
+                        <a class="nav-link {% if request.path == event_list_url %}active{% endif %}" aria-current="page"
+                            href="{% url 'event-list' %}">What's On</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
