--- a/events/templates/events/whats_on.html
+++ b/events/templates/events/whats_on.html
@@ -8,8 +8,14 @@
     {% if events %}
     <div class="row">
         {% for event in events %}
-        <div class="col-md-4 mb-4">
+        <div class="col-md-6 col-lg-4 mb-4">
             <div class="card h-100">
+                <!-- Date badge floating in top left corner of event image-->
+                <div class="position-absolute top-0 start-0 m-2">
+                    <span class="badge bg-danger fs-5 p-2">
+                        {{ event.date|date:"d M" }}
+                    </span>
+                </div>
                 <img src="{{ event.event_image.url }}" class="card-img-top" alt="{{ event.title }}">
                 <div class="card-body">
                     <h5 class="card-title">
