--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,5 @@
-/* Start of Codestar Blog's CSS */
-
 body {
-    background-color: #F9FAFC;
+    background-color: #f9fafc;
 }
 
 /* Used for navbar in "Harmonia Hall" logo */
@@ -9,24 +7,31 @@ body {
     font-family: Lato, sans-serif;
     font-size: 1.4rem;
     font-weight: 700;
-    color: #4A4A4F;
+    color: #4a4a4f;
 }
 
-.thin {
-    font-weight: 300;
+/* Applied to the footer element */
+.dark-bg {
+    background-color: #25484e;
 }
+
+/* Remove underline from event title in card */
+.card-title a {
+    text-decoration: none;
+}
+
+/* underline title on hover */
+.card-title a:hover {
+    text-decoration: underline;
+}
+
 
 .light-bg {
     background-color: #fff;
 }
 
-/* Applied to the footer element */
-.dark-bg {
-    background-color: #25484E;
-}
-
 .main-bg {
-    background-color: #F9FAFC;
+    background-color: #f9fafc;
 }
 
 .card {
@@ -51,46 +56,6 @@ body {
     height: auto;
 }
 
-.author {
-    color: white;
-    margin: 4px;
-    text-transform: uppercase;
-}
-
-.masthead {
-    margin-top: 10px;
-    overflow: hidden;
-    position: relative;
-    display: inline-block;
-    height: 33vh;
-    width: 100%;
-}
-
-.masthead-text {
-    background-color: #445261;
-    color: white;
-    position: relative;
-}
-
-.masthead-image {
-    position: relative;
-    overflow: hidden;
-}
-
-.masthead-image:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 90%;
-    height: 100%;
-    width: 150%;
-    background: #445261;
-    -webkit-transform: skew(15deg);
-    -moz-transform: skew(15deg);
-    transform: skew(15deg);
-    z-index: 100;
-}
-
 .post-link {
     text-decoration: none;
     color: #445261;
@@ -98,7 +63,7 @@ body {
 
 .post-link:hover,
 .page-link {
-    color: #E84610;
+    color: #e84610;
 }
 
 .post-title {
@@ -120,11 +85,11 @@ body {
 .btn-signup:hover,
 .btn-signup:active {
     background-color: #fff;
-    color: #23BBBB;
+    color: #23bbbb;
 }
 
 .link {
-    color: #23BBBB;
+    color: #23bbbb;
     text-decoration: none;
 }
 
@@ -135,19 +100,19 @@ body {
 }
 
 .btn-like {
-    color: #E84610;
+    color: #e84610;
     border: none;
     background: transparent;
 }
 
 .btn-delete {
     color: #fff;
-    background: #E84610;
+    background: #e84610;
 }
 
 .btn-like:hover,
 .btn-like:active {
-    color: #E84610;
+    color: #e84610;
     background: transparent;
     border: none;
 }
