--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 <body>
     <!-- Navigation Goes here -->
     <!-- Codestar example Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">Harmonia Hall</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
