--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
                 </ul>
                 <span class="navbar-text text-muted">
                     {% if user.is_authenticated %}
-                        Welcome, <strong>{{ user.username }}</strong>
+                        Welcome, <strong class="text-primary">{{ user.username }}</strong>
                     {% else %}
                         Welcome to Harmonia Hall
                     {% endif %}
